[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stampede"
version = "0.1.0"
description = "Multi-tier async caching with request coalescing, thundering herd prevention, and semantic similarity matching."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Griffin Strier" },
]
keywords = [
    "cache",
    "coalesce",
    "async",
    "redis",
    "valkey",
    "thundering-herd",
    "semantic-cache",
    "pgvector",
    "llm",
    "deduplication",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core has zero required dependencies — pure Python + asyncio
dependencies = []

[project.optional-dependencies]
# Fast hashing (recommended)
blake3 = ["blake3"]

# Fast JSON serialization (recommended)
orjson = ["orjson"]

# Redis/Valkey distributed caching + coalescing
redis = ["redis>=5.0"]

# Semantic caching with pgvector
semantic = [
    "asyncpg>=0.29",
]

# All optional dependencies
all = [
    "blake3",
    "orjson",
    "redis>=5.0",
    "asyncpg>=0.29",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/griffinstrier/stampede"
Repository = "https://github.com/griffinstrier/stampede"
Issues = "https://github.com/griffinstrier/stampede/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stampede = ["_lua/*.lua", "py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
